# vinasmol-rag-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  PROJECT_STATUS_UPDATE.md  README.md  TROUBLESHOOTING.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
configs/: alert.rules.yml  eval_config.yaml  prometheus.yaml  rag_config.yaml  training_config.yaml
configs/grafana/dashboards/: rag-metrics.json
configs/grafana/provisioning/dashboards/: dashboards.yaml
data/: .gitkeep  eval_rag.json
infrastructure/terraform/: .gitignore  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/modules/compute/: main.tf  outputs.tf  startup-api.sh  startup-training.sh  variables.tf
infrastructure/terraform/modules/networking/: main.tf  variables.tf
infrastructure/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
scripts/: clear_hf_cache.sh  demo_phase1.py  demo_phase3.py  demo_phase4.py  download_sample_data.py
src/: __init__.py
src/api/: __init__.py  main.py
src/data_pipeline/: __init__.py  text_processor.py  vietnamese_detector.py
src/evaluation/: __init__.py  evaluate_rag.py  hallucination_detector.py  vietnamese_benchmark.py
src/monitoring/: __init__.py  langfuse_tracer.py
src/rag/: __init__.py  cache.py  config.py  generator.py  pipeline.py  reranker.py  retriever.py
src/training/: __init__.py  train_lora.py  trainer_config.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_rag_api.py
tests/unit/: test_retriever.py  test_text_processor.py  test_trainer_config.py
